# simpleSingleDishDataReductor

./: .gitignore  CALTAB_L1  CALTAB_R1  README.md  a3s.py  caltabPaths.ini  cepa_20220208.tar.bz2  cepa_59618067.fits  config.json  faulty.csv  g111p25_20220225.tar.bz2  g111p25_59635902.fits  lista  main.py  proceeded.csv  pyproject.toml  requirements.txt  singleDReductor.py
UI/: abstractFigureClass.py  customButton.py  customLeftBarWidget.py  finishWidget.py  fitOrderChangeWidget.py  mainWindowWidget.py  manualCalCoeffSetter.py  moreEfficentFigureTemplate.py  polEndWidget.py  scanStackerElements.py  scanStackingWidget.py
UI/icons/: __init__.py
UI/ui_elements/: customButton.py  custom_toolbar.py  horizontal_separator.py
data/: caltabClass.py  dataClass.py  mergedScanClass.py  scanClass.py  scanObservation.py
src/simpleSingleDishDataReductor/: __main__.py  config.json
src/simpleSingleDishDataReductor/UI/: __init__.py  about.py  extended_inormation_widget.py  finishWidget.py  fitOrderChangeWidget.py  mainWindowWidget.py  manualCalCoeffSetter.py  polEndWidget.py  scanStackerElements.py  scanStackingWidget.py
src/simpleSingleDishDataReductor/UI/icons/: __init__.py
src/simpleSingleDishDataReductor/UI/ui_elements/: __init__.py  customButton.py  customLeftBarWidget.py  custom_groupbox.py  custom_label.py  custom_menu.py  custom_toolbar.py  custom_widget.py  horizontal_separator.py  style_sheet.py
src/simpleSingleDishDataReductor/data/: dataClass.py
tests/sample_data/: 212p06_20140810.tar.bz2  75p76_20180701.tar.bz2  g12p89_20160517.tar.bz2  g21p023_20200313.tar.bz2  g23p207_20180120.tar.bz2  g24p148_20170102.tar.bz2  g25p411_20140920.tar.bz2  g28p817_20180803.tar.bz2  g30p398_20160517.tar.bz2
tests/sample_data_k/: g111p25_20160913.tar.bz2  g111p25_20161026.tar.bz2  g111p25_20170205.tar.bz2  g111p25_20170318.tar.bz2
